@@ -97,7 +97,8 @@ $labels['writenewmessage']  = 'Neue Nachricht schreiben';
 $labels['replytomessage']   = 'Antwort verfassen';
 $labels['replytoallmessage'] = 'Antwort an Absender und alle Empfänger';
 $labels['forwardmessage']   = 'Nachricht weiterleiten';
-$labels['deletemessage']    = 'In den Papierkorb verschieben';
+$labels['deletemessage']    = 'Nachricht löschen';
+$labels['movemessagetotrash'] = 'Nachricht in den Papierkorb verschieben';
 $labels['printmessage']     = 'Diese Nachricht drucken';
 $labels['previousmessage']  = 'Vorherige Nachricht anzeigen';
 $labels['previousmessages'] = 'Vorherige Nachrichten anzeigen';
